feat: implementation tests